--- a/src/views/dashboard/index.ejs
+++ b/src/views/dashboard/index.ejs
@@ -408,6 +408,13 @@
                     </a>
                 </li>
 
+                                <li class="nav-item">
+                    <a class="nav-link text-white sidebar-link " href="/servidores">
+                        <i class="bi bi-server me-2"></i>
+                        <span class="sidebar-text">Servidores</span>
+                    </a>
+                </li>
+
                 </ul>
             
 
