Arreglos en el menú, en servidores y en mikrotik

--- a/src/views/consumibles/consumibles.ejs
+++ b/src/views/consumibles/consumibles.ejs
@@ -395,10 +395,17 @@
                     </a>
                 </li>
 
-                <li class="nav-item">
-                    <a class="nav-link text-white sidebar-link" href="/mikrotik">
+                                <li class="nav-item">
+                    <a class="nav-link text-white sidebar-link " href="/mikrotik">
                         <i class="bi bi-router me-2"></i>
-                        <span class="sidebar-text">Mikrotiks</span>
+                        <span class="sidebar-text">Redes</span>
+                    </a>
+                </li>
+
+                                <li class="nav-item">
+                    <a class="nav-link text-white sidebar-link " href="/servidores">
+                        <i class="bi bi-server me-2"></i>
+                        <span class="sidebar-text">Servidores</span>
                     </a>
                 </li>
             </ul>
