--- a/src/views/dashboard/index.ejs
+++ b/src/views/dashboard/index.ejs
@@ -404,7 +404,7 @@
                 <li class="nav-item">
                     <a class="nav-link text-white sidebar-link " href="/mikrotik">
                         <i class="bi bi-router me-2"></i>
-                        <span class="sidebar-text">Mikrotiks</span>
+                        <span class="sidebar-text">Redes</span>
                     </a>
                 </li>
 
