--- a/src/views/departamento/departamento.ejs
+++ b/src/views/departamento/departamento.ejs
@@ -363,6 +363,13 @@
                         <span class="sidebar-text">Servidores</span>
                     </a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link text-white sidebar-link" href="/dvr">
+                        <i class="bi bi-camera-video me-2"></i>
+                        <span class="sidebar-text">DVR</span>
+                    </a>
+                </li>
             </ul>
         
             <div class="mt-auto p-3">
