--- a/src/views/equipoA/equipoA.ejs
+++ b/src/views/equipoA/equipoA.ejs
@@ -419,10 +419,16 @@
                     </a>
                 </li>
 
-                                <li class="nav-item">
+                <li class="nav-item">
                     <a class="nav-link text-white sidebar-link " href="/servidores">
                         <i class="bi bi-server me-2"></i>
                         <span class="sidebar-text">Servidores</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white sidebar-link active" href="/dvr">
+                        <i class="bi bi-camera-video me-2"></i>
+                        <span class="sidebar-text">Sistema de Cámaras</span>
                     </a>
                 </li>
             </ul>
