--- a/src/views/mikrotik/mikrotik.ejs
+++ b/src/views/mikrotik/mikrotik.ejs
@@ -378,10 +378,16 @@
                     </a>
                 </li>
 
-                                <li class="nav-item">
+                <li class="nav-item">
                     <a class="nav-link text-white sidebar-link " href="/servidores">
                         <i class="bi bi-server me-2"></i>
                         <span class="sidebar-text">Servidores</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white sidebar-link" href="/dvr">
+                        <i class="bi bi-camera-video me-2"></i>
+                        <span class="sidebar-text">DVR</span>
                     </a>
                 </li>
             </ul>
