--- a/src/views/usuario/usuario.ejs
+++ b/src/views/usuario/usuario.ejs
@@ -371,7 +371,7 @@
                         <span class="sidebar-text">Impresoras</span>
                     </a>
                 </li>
-                
+
                 <li class="nav-item">
                     <a class="nav-link text-white sidebar-link " href="/mikrotik">
                         <i class="bi bi-router me-2"></i>
@@ -379,10 +379,16 @@
                     </a>
                 </li>
 
-                                <li class="nav-item">
+                <li class="nav-item">
                     <a class="nav-link text-white sidebar-link " href="/servidores">
                         <i class="bi bi-server me-2"></i>
                         <span class="sidebar-text">Servidores</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white sidebar-link" href="/dvr">
+                        <i class="bi bi-camera-video me-2"></i>
+                        <span class="sidebar-text">DVR</span>
                     </a>
                 </li>
             </ul>
