--- a/src/views/usuarios/usuarios.ejs
+++ b/src/views/usuarios/usuarios.ejs
@@ -416,10 +416,16 @@
                     </a>
                 </li>
 
-                                <li class="nav-item">
+                <li class="nav-item">
                     <a class="nav-link text-white sidebar-link " href="/servidores">
                         <i class="bi bi-server me-2"></i>
                         <span class="sidebar-text">Servidores</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white sidebar-link" href="/dvr">
+                        <i class="bi bi-camera-video me-2"></i>
+                        <span class="sidebar-text">DVR</span>
                     </a>
                 </li>
             </ul>
@@ -528,34 +534,34 @@
                     <div class="card-body">
                         <!-- Filtros -->
                        <div class="row mb-4 g-2">
-    <div class="col-md-3">
-        <div class="input-group input-group-sm">
-            <span class="input-group-text"><i class="bi bi-person"></i></span>
-            <input type="text" class="form-control" placeholder="Buscar por nombre..." id="searchName">
-        </div>
-    </div>
-    <div class="col-md-3">
-        <div class="input-group input-group-sm">
-            <span class="input-group-text"><i class="bi bi-briefcase"></i></span>
-            <input type="text" class="form-control" placeholder="Buscar por cargo..." id="searchCargo">
-        </div>
-    </div>
-    <div class="col-md-3">
-        <div class="input-group input-group-sm">
-            <span class="input-group-text"><i class="bi bi-building"></i></span>
-            <input type="text" class="form-control" placeholder="Buscar por sede o departamento..." id="searchSede">
-        </div>
-    </div>
- 
-    <div class="col-md-3">
-        <div class="d-flex justify-content-between align-items-center">
-           
-            <button class="btn btn-sm btn-outline-secondary" id="resetFilters">
-                <i class="bi bi-arrow-counterclockwise me-1"></i> Limpiar 
-            </button>
-        </div>
-    </div>
-</div>
+                            <div class="col-md-3">
+                                <div class="input-group input-group-sm">
+                                    <span class="input-group-text"><i class="bi bi-person"></i></span>
+                                    <input type="text" class="form-control" placeholder="Buscar por nombre..." id="searchName">
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="input-group input-group-sm">
+                                    <span class="input-group-text"><i class="bi bi-briefcase"></i></span>
+                                    <input type="text" class="form-control" placeholder="Buscar por cargo..." id="searchCargo">
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="input-group input-group-sm">
+                                    <span class="input-group-text"><i class="bi bi-building"></i></span>
+                                    <input type="text" class="form-control" placeholder="Buscar por sede o departamento..." id="searchSede">
+                                </div>
+                            </div>
+                        
+                            <div class="col-md-3">
+                                <div class="d-flex justify-content-between align-items-center">
+                                
+                                    <button class="btn btn-sm btn-outline-secondary" id="resetFilters">
+                                        <i class="bi bi-arrow-counterclockwise me-1"></i> Limpiar 
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
 
                         <!-- Tabla de Usuarios -->
                         <div class="table-responsive">
