Menú que faltó arreglar

--- a/src/views/equipoA/equipoA.ejs
+++ b/src/views/equipoA/equipoA.ejs
@@ -426,9 +426,9 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white sidebar-link active" href="/dvr">
+                    <a class="nav-link text-white sidebar-link" href="/dvr">
                         <i class="bi bi-camera-video me-2"></i>
-                        <span class="sidebar-text">Sistema de Cámaras</span>
+                        <span class="sidebar-text">DVR</span>
                     </a>
                 </li>
             </ul>
