--- a/src/views/servidores/servidores.ejs
+++ b/src/views/servidores/servidores.ejs
@@ -242,7 +242,7 @@
         .ip-address {
             font-family: 'Courier New', monospace;
             font-weight: bold;
-            background-color: #4a7096;
+            background-color: #b64f26;
             padding: 2px 6px;
             border-radius: 4px;
             font-size: 0.85rem;
