--- a/src/views/impresoras/impresoras.ejs
+++ b/src/views/impresoras/impresoras.ejs
@@ -516,7 +516,7 @@
                 </div>
                 
                 <div class="card border-0 shadow mb-4">
-                    <div class="card-header text-white py-3" >
+                    <div class="card-header bg-dark text-white py-3" >
                         <div class="d-flex justify-content-between align-items-center">
                             <h5 class="mb-0">
                                 <i class="bi bi-list-ul me-2 text-danger"></i> Lista de Impresoras
@@ -535,7 +535,6 @@
                                         </ul>
                                     </div>
                         </div>
-                        
                     </div>
                     <div class="card-body">
                         <!-- Filtros -->
