--- a/src/views/consumibles/consumibles.ejs
+++ b/src/views/consumibles/consumibles.ejs
@@ -352,6 +352,13 @@
                         <span class="sidebar-text">Usuarios</span>
                     </a>
                 </li>
+                
+                <li class="nav-item">
+                        <a class="nav-link text-white sidebar-link" href="/telefonos">
+                            <i class="bi bi-telephone me-2"></i>
+                            <span class="sidebar-text">Teléfonos</span>
+                        </a>
+                    </li>
 
                 <li class="nav-item">
                     <a class="nav-link text-white sidebar-link" href="/sedes">
