--- a/src/views/telefonos/telefonos.ejs
+++ b/src/views/telefonos/telefonos.ejs
@@ -351,6 +351,13 @@
                 </li>
 
                 <li class="nav-item">
+                        <a class="nav-link text-white sidebar-link" href="/telefonos">
+                            <i class="bi bi-telephone me-2"></i>
+                            <span class="sidebar-text">Teléfonos</span>
+                        </a>
+                    </li>
+
+                <li class="nav-item">
                     <a class="nav-link text-white sidebar-link" href="/sedes">
                         <i class="bi bi-building me-2"></i>
                         <span class="sidebar-text">Sedes</span>
@@ -1235,11 +1242,11 @@
                     </td>
                     <td>
                         <small class="d-block">
-                            <i class="bi bi-hdd-network me-1"></i>${asignacion.ip_telefono || 'N/A'}
+                            <i class="bi bi-wifi me-1"></i>${asignacion.ip_telefono || 'N/A'}
                         </small>
                         ${asignacion.mac_telefono ? `
                         <small class="d-block text-muted">
-                            <i class="bi bi-wifi me-1"></i>${asignacion.mac_telefono}
+                            <i class="bi bi-hdd-network me-1"></i>${asignacion.mac_telefono}
                         </small>
                         ` : ''}
                     </td>
