--- a/src/views/usuarios/usuarios.ejs
+++ b/src/views/usuarios/usuarios.ejs
@@ -368,6 +368,13 @@
                 </li>
 
                 <li class="nav-item">
+                        <a class="nav-link text-white sidebar-link" href="/telefonos">
+                            <i class="bi bi-telephone me-2"></i>
+                            <span class="sidebar-text">Teléfonos</span>
+                        </a>
+                    </li>
+
+                <li class="nav-item">
                     <a class="nav-link text-white sidebar-link" href="/sedes">
                         <i class="bi bi-building me-2"></i>
                         <span class="sidebar-text">Sedes</span>
